buyback in progress

--- a/src/blocks/modules/_modules.scss
+++ b/src/blocks/modules/_modules.scss
@@ -12,3 +12,4 @@
 @import "e-app-reg/e-app-reg";
 @import "e-suppliers/e-suppliers";
 @import "e-cars/e-cars";
+@import "analytics-list/analytics-list";
