--- a/src/views/helpers/mixins.pug
+++ b/src/views/helpers/mixins.pug
@@ -25,3 +25,4 @@ mixin mixins()
     include ../../blocks/modules/e-app-reg/e-app-reg
     include ../../blocks/modules/e-suppliers/e-suppliers
     include ../../blocks/modules/e-cars/e-cars
+    include ../../blocks/modules/analytics-list/analytics-list
