--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -138,6 +138,7 @@ block content
                     a.pages-list__link.pages-list__link--check(href="s-manual-adding.html" target="_blank") Ручное добавление автомобиля
                     a.pages-list__link.pages-list__link--check(href="s-view-card.html" target="_blank") Просмотр карточки
                     a.pages-list__link.pages-list__link--check(href="s-upload-db.html" target="_blank") Загрузить базу автомобилей
+                    a.pages-list__link.pages-list__link--check(href="s-analytics.html" target="_blank") Аналитика
                     a.pages-list__link.pages-list__link--check(href="s-cars.html" target="_blank") Мои автомобили
                     a.pages-list__link.pages-list__link--check(href="s-cars-archive.html" target="_blank") Архивные автомобили
 
@@ -146,6 +147,7 @@ block content
                     a.pages-list__link.pages-list__link--check(href="employee.html" target="_blank") Сотрудник разводящая
                     a.pages-list__link.pages-list__link--check(href="e-app-reg.html" target="_blank") Заявки на регистрацию аккаунта
                     a.pages-list__link.pages-list__link--check(href="e-suppliers.html" target="_blank") База поставщиков
+                    a.pages-list__link.pages-list__link--check(href="e-cars-supplier.html" target="_blank") Каталог автомобилей поставщика
                     a.pages-list__link.pages-list__link--check(href="e-cars.html" target="_blank") Каталог автомобилей
-                    a.pages-list__link.pages-list__link--work(href="e-cars-supplier.html" target="_blank") Каталог автомобилей поставщика
+                    a.pages-list__link.pages-list__link--work(href="e-buyback.html" target="_blank") Заявки на выкуп автомобилей
                     a.pages-list__link.pages-list__link--check(href="e-view-card.html" target="_blank") Просмотр карточки
