--- a/src/views/pages/e-cars-supplier.pug
+++ b/src/views/pages/e-cars-supplier.pug
@@ -27,4 +27,159 @@ block content
                     ],
                 })
 
-        +e-cars
+        +e-cars({
+            title: '<h1>Каталог поставщика ООО Рога и Копыта</h1> <div class="info-row__icon"><svg><use xlink:href="img/sprites/sprite.svg#check"></use></svg></div>',
+            isSupplier: true,
+            cards: [
+                {
+                    img: 'img/catalog-product/cp_intro_1.webp',
+                    title: 'Lixiang L7 Pro 449 л.с. Hybrid Turbo 4WD',
+                    price: {
+                        current: '15 000 000 ₽',
+                        old: '',
+                        direction: '',
+                        tooltip: false
+                    },
+                    dateAdded: {
+                        date: '29.08.2025',
+                        days: '1 день',
+                        status: 'green',
+                        supplier: 'ИП Иванов Виктор Алексеевич'
+                    },
+                    sticker: {
+                        text: 'В наличии',
+                        color: 'blue'
+                    },
+                    delivery: {
+                        date: '15.08.2025',
+                        city: 'Владивосток',
+                        term: '5 дней'
+                    },
+                },
+                {
+                    img: 'img/catalog-product/cp_intro_1.webp',
+                    title: 'Lixiang L7 Pro 449 л.с. Hybrid Turbo 4WD',
+                    price: {
+                        current: '15 000 000 ₽',
+                        old: '',
+                        direction: '',
+                        tooltip: false
+                    },
+                    dateAdded: {
+                        date: '29.08.2025',
+                        days: '1 день',
+                        status: 'green',
+                        supplier: 'ООО Рога и Копыта'
+                    },
+                    sticker: {
+                        text: 'В наличии',
+                        color: 'blue'
+                    },
+                    delivery: {
+                        date: '15.08.2025',
+                        city: 'Владивосток',
+                        term: '5 дней'
+                    },
+                },
+                {
+                    img: 'img/catalog-product/cp_intro_1.webp',
+                    title: 'Lixiang L7 Pro 449 л.с. Hybrid Turbo 4WD',
+                    price: {
+                        current: '15 000 000 ₽',
+                        old: '',
+                        direction: '',
+                        tooltip: false
+                    },
+                    dateAdded: {
+                        date: '29.08.2025',
+                        days: '1 день',
+                        status: 'green',
+                        supplier: 'ИП Иванов Виктор Алексеевич'
+                    },
+                    sticker: {
+                        text: 'В наличии',
+                        color: 'blue'
+                    },
+                    delivery: {
+                        date: '15.08.2025',
+                        city: 'Владивосток',
+                        term: '5 дней'
+                    },
+                },
+                {
+                    img: 'img/catalog-product/cp_intro_1.webp',
+                    title: 'Lixiang L7 Pro 449 л.с. Hybrid Turbo 4WD',
+                    price: {
+                        current: '15 000 000 ₽',
+                        old: '',
+                        direction: '',
+                        tooltip: false
+                    },
+                    dateAdded: {
+                        date: '29.08.2025',
+                        days: '1 день',
+                        status: 'green',
+                        supplier: 'ООО Рога и Копыта'
+                    },
+                    sticker: {
+                        text: 'В наличии',
+                        color: 'blue'
+                    },
+                    delivery: {
+                        date: '15.08.2025',
+                        city: 'Владивосток',
+                        term: '5 дней'
+                    },
+                },
+                {
+                    img: 'img/catalog-product/cp_intro_1.webp',
+                    title: 'Lixiang L7 Pro 449 л.с. Hybrid Turbo 4WD',
+                    price: {
+                        current: '15 000 000 ₽',
+                        old: '',
+                        direction: '',
+                        tooltip: false
+                    },
+                    dateAdded: {
+                        date: '29.08.2025',
+                        days: '1 день',
+                        status: 'green',
+                        supplier: 'ИП Иванов Виктор Алексеевич'
+                    },
+                    sticker: {
+                        text: 'В наличии',
+                        color: 'blue'
+                    },
+                    delivery: {
+                        date: '15.08.2025',
+                        city: 'Владивосток',
+                        term: '5 дней'
+                    },
+                },
+                {
+                    img: 'img/catalog-product/cp_intro_1.webp',
+                    title: 'Lixiang L7 Pro 449 л.с. Hybrid Turbo 4WD',
+                    price: {
+                        current: '15 000 000 ₽',
+                        old: '',
+                        direction: '',
+                        tooltip: false
+                    },
+                    dateAdded: {
+                        date: '29.08.2025',
+                        days: '1 день',
+                        status: 'green',
+                        supplier: 'ООО Ромашка'
+                    },
+                    sticker: {
+                        text: 'В наличии',
+                        color: 'blue'
+                    },
+                    delivery: {
+                        date: '15.08.2025',
+                        city: 'Владивосток',
+                        term: '5 дней'
+                    },
+                },
+            ],
+        })(data-js="eCars")
