--- a/src/blocks/modules/e-cars/e-cars.scss
+++ b/src/blocks/modules/e-cars/e-cars.scss
@@ -13,6 +13,9 @@
 
     &__title {
         margin-top: 6px;
+        display: flex;
+        align-items: center;
+        gap: 10px;
     }
 
     &__filter {
@@ -54,6 +57,7 @@
         justify-content: space-between;
         gap: 32px;
         margin-top: 32px;
+        margin-bottom: 26px;
         padding: 32px 0;
         border-top: 1px solid #E4E4E7;
 
@@ -62,6 +66,7 @@
             align-items: flex-start;
             gap: 20px;
             margin-top: 20px;
+            margin-bottom: 0;
             padding: 20px 0;
         }
 
@@ -91,13 +96,8 @@
     }
 
     &__list {
-        margin-top: 26px;
         display: flex;
         flex-direction: column;
-
-        @include max(tablet) {
-            margin-top: 0;
-        }
     }
 
     &__card+&__card {
@@ -106,6 +106,70 @@
 
     &__block {
         padding-bottom: 64px;
+    }
+
+    &__selects {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 12px;
+        justify-content: space-between;
+        padding-bottom: 24px;
+        border-bottom: 1px solid #E4E4E7;
+        display: none;
+
+        &.active {
+            display: flex;
+        }
+    }
+
+    &__selects &__checkbox.field {
+        @include max(laptop-small) {
+            align-self: center;
+        }
+    }
+
+    &__checkbox.field {
+        align-self: center;
+
+        @include max(laptop-small) {
+            align-self: flex-start;
+        }
+
+        .fake-checkbox.fake-checkbox--text {
+            align-items: center;
+        }
+
+        .fake-checkbox__square {
+            width: 32px;
+            height: 32px;
+            background-color: $c-bg-main;
+            border-color: $c-bg-main;
+
+            svg {
+                width: 20px;
+                height: 20px;
+
+                @include max(mobile) {
+                    width: 14px;
+                    height: 14px;
+
+                }
+            }
+
+            @include max(mobile) {
+                width: 22px;
+                height: 22px;
+
+            }
+        }
+
+        .fake-checkbox__text {
+            font-weight: 700;
+            font-size: 16px;
+            line-height: 150%;
+            letter-spacing: 0;
+        }
     }
 }
 
@@ -184,6 +248,11 @@
             flex-wrap: wrap;
             gap: 16px 24px;
         }
+    }
+
+    &--supplier &__bottom {
+        flex-direction: column;
+        gap: 4px;
     }
 
     &__block {
