--- a/src/blocks/modules/e-suppliers/e-suppliers.scss
+++ b/src/blocks/modules/e-suppliers/e-suppliers.scss
@@ -228,6 +228,7 @@
     }
 
     &__icon {
+        flex-shrink: 0;
         display: flex;
         align-items: center;
         justify-content: center;
