--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -35,6 +35,9 @@ $c-status-red: #DC2626;
 $c-status-green: #22C55E;
 $c-status-blue: #2453E1;
 $c-status-yellow: #EAB308;
+$c-status-lred: #FEF2F2;
+$c-status-lgreen: #DCFCE7;
+$c-status-lyellow: #FEF9C3;
 
 
 $c-accent-2: #FC00FF;
