--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -139,6 +139,9 @@ block content
                     a.pages-list__link.pages-list__link--check(href="s-view-card.html" target="_blank") Просмотр карточки
                     a.pages-list__link.pages-list__link--check(href="s-upload-db.html" target="_blank") Загрузить базу автомобилей
                     a.pages-list__link.pages-list__link--check(href="s-analytics.html" target="_blank") Аналитика
+                    a.pages-list__link.pages-list__link--check(href="s-purchase.html" target="_blank") Запросы на покупку
+                    a.pages-list__link.pages-list__link--check(href="s-problem.html" target="_blank") Проблемные автомобили
+                    a.pages-list__link.pages-list__link--work(href="s-problem-car.html" target="_blank") Проблемные автомобили (детальная)
                     a.pages-list__link.pages-list__link--check(href="s-cars.html" target="_blank") Мои автомобили
                     a.pages-list__link.pages-list__link--check(href="s-cars-archive.html" target="_blank") Архивные автомобили
 
@@ -149,5 +152,5 @@ block content
                     a.pages-list__link.pages-list__link--check(href="e-suppliers.html" target="_blank") База поставщиков
                     a.pages-list__link.pages-list__link--check(href="e-cars-supplier.html" target="_blank") Каталог автомобилей поставщика
                     a.pages-list__link.pages-list__link--check(href="e-cars.html" target="_blank") Каталог автомобилей
-                    a.pages-list__link.pages-list__link--work(href="e-buyback.html" target="_blank") Заявки на выкуп автомобилей
+                    a.pages-list__link.pages-list__link--check(href="e-buyback.html" target="_blank") Заявки на выкуп автомобилей
                     a.pages-list__link.pages-list__link--check(href="e-view-card.html" target="_blank") Просмотр карточки
