--- a/src/views/pages/s-problem.pug
+++ b/src/views/pages/s-problem.pug
@@ -1,9 +1,9 @@
 extends ../layouts/default
 
 block variables
-    - const title = "Заявки на покупку автомобилей"
-    - const footerType = 'employee'
-    - const headerType = 'employee'
+    - const title = "Проблемные автомобили"
+    - const footerType = 'supplier'
+    - const headerType = 'supplier'
 
 block content
     .page-layout(data-js="pageLayout")
@@ -17,15 +17,15 @@ block content
                             link: 'javascript:void(0);'
                         },
                         {
-                            name: 'Заявки на покупку автомобилей',
+                            name: 'Проблемные автомобили',
                             link: 'javascript:void(0);'
                         }
                     ],
                 })
 
-        +e-cars({
-            title: '<h1>Заявки на покупку автомобилей</h1>',
-            isBuyback: true,
+        +s-cars({
+            title: '<h1>Проблемные автомобили</h1>',
+            isProblem: true,
             cards: [
                 {
                     img: 'img/catalog-product/cp_intro_1.webp',
@@ -33,18 +33,12 @@ block content
                     price: {
                         current: '15 000 000 ₽',
                         old: '',
-                        direction: '',
-                        tooltip: false
+                        direction: ''
                     },
                     dateAdded: {
                         date: '29.08.2025',
                         days: '1 день',
                         status: 'green',
-                        supplier: 'ИП Иванов Виктор Алексеевич'
-                    },
-                    sticker: {
-                        text: 'Выкуплен',
-                        color: 'green'
                     }
                 },
                 {
@@ -53,19 +47,13 @@ block content
                     price: {
                         current: '15 000 000 ₽',
                         old: '',
-                        direction: '',
-                        tooltip: false
+                        direction: ''
                     },
                     dateAdded: {
                         date: '29.08.2025',
                         days: '1 день',
                         status: 'green',
-                        supplier: 'ООО Рога и Копыта'
                     },
-                    sticker: {
-                        text: 'Не выкуплен',
-                        color: 'blue'
-                    }
                 },
                 {
                     img: 'img/catalog-product/cp_intro_1.webp',
@@ -73,19 +61,13 @@ block content
                     price: {
                         current: '15 000 000 ₽',
                         old: '',
-                        direction: '',
-                        tooltip: false
+                        direction: ''
                     },
                     dateAdded: {
                         date: '29.08.2025',
                         days: '1 день',
                         status: 'green',
-                        supplier: 'ИП Иванов Виктор Алексеевич'
                     },
-                    sticker: {
-                        text: 'Заявка отправлена',
-                        color: 'yellow'
-                    }
                 },
                 {
                     img: 'img/catalog-product/cp_intro_1.webp',
@@ -93,19 +75,14 @@ block content
                     price: {
                         current: '15 000 000 ₽',
                         old: '',
-                        direction: '',
-                        tooltip: false
+                        direction: ''
                     },
                     dateAdded: {
                         date: '29.08.2025',
                         days: '1 день',
                         status: 'green',
-                        supplier: 'ООО Рога и Копыта'
-                    },
-                    sticker: {
-                        text: 'Заявка отклонена',
-                        color: 'red'
                     }
                 },
+
             ],
         })
